--- a/src/main/resources/templates/products_page.html
+++ b/src/main/resources/templates/products_page.html
@@ -5,11 +5,15 @@
     <title>Title</title>
 </head>
 <body>
-    <h1>Product repository: list of products</h1>
-    <hr>
-    <div th:each="p : ${products}">
+<h1>Product repository: list of products</h1>
+<hr>
+<div th:each="p : ${products}">
+
+
+    <a th:href="@{'/products/' + ${p.id}}">
         <span th:text="${'ID: ' + p.id + ' title: ' + p.title + ' cost: ' + p.cost}"/>
-    </div>
+    </a>
+</div>
 
 </body>
 </html>
